projects/vb6parse/snapshots/tests/library/math/tan/tan_trig_table.snap
---
source: projects/vb6parse/tests/library/math/tan.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: SubStatement
      children:
        - kind: SubKeyword
          text: Sub
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: Test
        - kind: ParameterList
          children:
            - kind: LeftParenthesis
              text: (
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
        - kind: StatementList
          children:
            - kind: ForStatement
              children:
                - kind: Whitespace
                  text: "    "
                - kind: ForKeyword
                  text: For
                - kind: Whitespace
                  text: " "
                - kind: IdentifierExpression
                  children:
                    - kind: Identifier
                      text: i
                - kind: Whitespace
                  text: " "
                - kind: EqualityOperator
                  text: "="
                - kind: Whitespace
                  text: " "
                - kind: NumericLiteralExpression
                  children:
                    - kind: IntegerLiteral
                      text: "0"
                - kind: Whitespace
                  text: " "
                - kind: ToKeyword
                  text: To
                - kind: Whitespace
                  text: " "
                - kind: NumericLiteralExpression
                  children:
                    - kind: IntegerLiteral
                      text: "90"
                - kind: Whitespace
                  text: " "
                - kind: StepKeyword
                  text: Step
                - kind: Whitespace
                  text: " "
                - kind: NumericLiteralExpression
                  children:
                    - kind: IntegerLiteral
                      text: "15"
                - kind: Newline
                  text: "\n"
                - kind: StatementList
                  children:
                    - kind: Whitespace
                      text: "        "
                    - kind: CallStatement
                      children:
                        - kind: Identifier
                          text: Debug
                        - kind: PeriodOperator
                          text: "."
                        - kind: PrintKeyword
                          text: Print
                        - kind: Whitespace
                          text: " "
                        - kind: ArgumentList
                          children:
                            - kind: Argument
                              children:
                                - kind: BinaryExpression
                                  children:
                                    - kind: BinaryExpression
                                      children:
                                        - kind: BinaryExpression
                                          children:
                                            - kind: StringLiteralExpression
                                              children:
                                                - kind: StringLiteral
                                                  text: "\"Tan(\""
                                            - kind: Whitespace
                                              text: " "
                                            - kind: Ampersand
                                              text: "&"
                                            - kind: Whitespace
                                              text: " "
                                            - kind: IdentifierExpression
                                              children:
                                                - kind: Identifier
                                                  text: i
                                        - kind: Whitespace
                                          text: " "
                                        - kind: Ampersand
                                          text: "&"
                                        - kind: Whitespace
                                          text: " "
                                        - kind: StringLiteralExpression
                                          children:
                                            - kind: StringLiteral
                                              text: "\") = \""
                                    - kind: Whitespace
                                      text: " "
                                    - kind: Ampersand
                                      text: "&"
                                    - kind: Whitespace
                                      text: " "
                                    - kind: CallExpression
                                      children:
                                        - kind: Identifier
                                          text: Tan
                                        - kind: LeftParenthesis
                                          text: (
                                        - kind: ArgumentList
                                          children:
                                            - kind: Argument
                                              children:
                                                - kind: BinaryExpression
                                                  children:
                                                    - kind: BinaryExpression
                                                      children:
                                                        - kind: IdentifierExpression
                                                          children:
                                                            - kind: Identifier
                                                              text: i
                                                        - kind: Whitespace
                                                          text: " "
                                                        - kind: MultiplicationOperator
                                                          text: "*"
                                                        - kind: Whitespace
                                                          text: " "
                                                        - kind: NumericLiteralExpression
                                                          children:
                                                            - kind: SingleLiteral
                                                              text: "3.14159265358979"
                                                    - kind: Whitespace
                                                      text: " "
                                                    - kind: DivisionOperator
                                                      text: /
                                                    - kind: Whitespace
                                                      text: " "
                                                    - kind: NumericLiteralExpression
                                                      children:
                                                        - kind: IntegerLiteral
                                                          text: "180"
                                        - kind: RightParenthesis
                                          text: )
                        - kind: Newline
                          text: "\n"
                    - kind: Whitespace
                      text: "    "
                - kind: NextKeyword
                  text: Next
                - kind: Whitespace
                  text: " "
                - kind: Identifier
                  text: i
                - kind: Newline
                  text: "\n"
        - kind: EndKeyword
          text: End
        - kind: Whitespace
          text: " "
        - kind: SubKeyword
          text: Sub
        - kind: Newline
          text: "\n"
